--- a/McDonaldFarm/McDonaldFarm.vcxproj.filters
+++ b/McDonaldFarm/McDonaldFarm.vcxproj.filters
@@ -18,5 +18,19 @@
     <ClCompile Include="McDonaldFarm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FenceCalculator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Fence.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="FenceCalculator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Fence.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
